# cli-scrabble

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  coverage.xml  dev-requirements.txt  pyproject.toml
.github/workflows/: coverage-badge.yml  python-package.yml
scrabble/: scrabble.py
scrabble/bag/: __init__.py  letter.py  letter_bag.py
scrabble/board/: __init__.py  board.py
scrabble/player/: __init__.py  player.py
tests/: test_bag_class.py  test_board_class.py  test_letter_class.py  test_player_class.py
