[build-systems]
requires = [
    "setuptools>=58.0.0",
    "wheel>=0.36.0",
]
build-backend = "setuptools.build_meta"

[pytest.tool.ini_options]
minversion = "6.0"
addopts = "--cov-report term-missing --cov=scrabble"
required_plugins = ['pytest-cov>=2.12.1']
log_file = 'logs/pytest-logs.txt'
log_file_date_format = '%Y-%m-%d %H:%M:%S'
log_file_format = '%(asctime)s %(levelname)s %(message)s'
log_file_level = 'DEBUG'
testpaths = ['tests']
python_files = ['test_*.py']
python_functions = ['test_*']
xfail_strict = 'True'
