[build-systems]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cli-scrabble"
version = "0.0.1"
description = ""
readme = "README.md"
authors = ["Tim Pogue <t.pogue.python@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
black = "*"
pre-commit = "^2.15.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=scrabble --cov-report=term-missing"
required_plugins = ['pytest-cov>=2.12.1']
log_file = 'logs/pytest-logs.txt'
log_file_date_format = '%Y-%m-%d %H:%M:%S'
log_file_format = '%(asctime)s %(levelname)s %(message)s'
log_file_level = 'DEBUG'
testpaths = ['tests']
python_files = ['test_*.py']
python_functions = ['test_*']
xfail_strict = 'True'
